# Agentic-Pilot

./: .gitignore  ARCHITECTURE.md  AUDIT_REPORT.md  CERTIFICATION_REPORT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXECUTION_FLOW.md  MEMORY_VALIDATION.md  Makefile  README.md  VALIDATION_AUDIT.md  VISION_VALIDATION.md  certify_output2.txt  run.bat  setup.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
backend/: __init__.py  config.py  main.py  requirements.txt
backend/agent/: __init__.py  graph.py  nodes.py  prompts.py  runner.py  state.py
backend/api/: __init__.py  approvals.py  health.py  plugins.py  schemas.py  sessions.py  settings.py  tasks.py
backend/browser/: __init__.py  actions.py  dom.py  executor.py  pool.py
backend/db/: __init__.py  database.py  models.py
backend/evidence/: manager.py
backend/llm/: __init__.py  gateway.py  parser.py
backend/memory/: manager.py  provider.py
backend/plugins/: __init__.py  base.py  runtime.py
backend/recovery/: engine.py
backend/replay/: system.py
backend/security/: __init__.py  approval.py  credentials.py  sessions.py
backend/telemetry/: tracer.py  tracker.py
benchmarks/: run.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  (+1 more)
scripts/: benchmark.py  certify.py  validate_memory.py  validate_vision.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  ollama.rs  python.rs  setup.rs
tests/: test_agent.py  test_database.py  test_parser.py  test_plugins.py  test_task_runner.py
(+21 files in other folders)
