[package]
name = "pilot"
version = "0.1.0"
description = "Pilot local-first AI browser automation agent"
authors = ["Pilot Contributors"]
license = "MIT"
edition = "2021"

[lib]
name = "pilot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
